syntax = "proto3"; 
option java_multiple_files = true;
package dnc.grpcService.protocol; 
// 数学运算服务 
service HistoryService
{ 
    rpc GetHistories (GetHistoriesReq) returns (GetHistoriesRsp) {} 
} 
message MessageHead {
    string IP = 1;
}
message GetHistoriesReq { 
    MessageHead Head = 1;
} 
message History {
    int32 Id = 1;
    string StartDate = 2;
    string EndDate = 3;
    string HistoryName = 4;
}
message GetHistoriesRsp { 
    int32 RetCode = 1;
    string RetDesc = 2;
    repeated History Histories = 3;
} 

